<resources>
    <string name="app_name">Madar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="job_title">Job title</string>
    <string name="job_title_">Job title :</string>
    <string name="save">Save</string>
    <string name="gender_must_be_selected">Gender must be selected</string>
    <string name="age">Age :</string>
    <string name="name">Name :</string>
    <string name="gender">Gender :</string>


    <string name="name_required">Name is required</string>
    <string name="age_required">Age is required</string>
    <string name="job_title_required">Job title is required</string>
    <string name="age_invalid">Age must be greater than 0</string>
    <string name="user_saved">User saved</string>
    <string name="unexpected_error">Unexpected error</string>
    <string name="user_gender_age">years old</string>
    <string name="title_activity_compose">ComposeActivity</string>
    <string name="show_saved_users">Show saved users</string>

</resources>